--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@
 env:
   global:
   - secure: "A27gNApbElRr3fqZXifVPKkB+xbxMYDFINGk2RDqul1X1Zg51M7e+ohHO9BwhEYiOGmCnFfbsVUP11XyFIH6kzWmxw9mhy8YDglbYfeyu6grxtU3mHElz8W7wO5OCPFPWXQf23sVYE8AWyjj6M+t3oyLJhPXCcYI7uMHEQm10CQ=" # GH_TOKEN
+  - secure: "F/LBl+hmRJv6kcDKX/N/e8RBJ5D/Non6V/pQawDIU0z+MQbz7fV6/358YVUwyf8Cm2qkyRO/jPWDBRfy/W9X0OlgAFrrTvRe6H2usf24WcU+4hO7u0gS99ca2HRggH7UkQ7GEnCraz65ThlJSEIUpE8+NnlFXpWY2ld4JMNkL44=" # REPO_TOKEN
 
 git:
   depth: 1
@@ -157,19 +158,19 @@ matrix:
 #
 # Benchmarks
 #
-  - os: linux
-    dist: precise
-    env: BS=cmake BENCHMARK=QUICK CXX=clang++-4.0
-    addons: { apt: { packages: ["clang-4.0", "libstdc++-7-dev"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-4.0"] } }
+  #- os: linux
+    #dist: precise
+    #env: BS=cmake BENCHMARK=QUICK CXX=clang++-4.0 LIBCXX=ON
+    #addons: { apt: { packages: ["clang-4.0", "libstdc++-6-dev"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-4.0"] } }
 
-  - os: linux
-    dist: trusty
-    env: BS=cmake BENCHMARK=QUICK CXX=g++-7
-    addons: { apt: { packages: ["g++-7", "libstdc++-7-dev"], sources: ["ubuntu-toolchain-r-test"] } }
+  #- os: linux
+    #dist: trusty
+    #env: BS=cmake BENCHMARK=QUICK CXX=g++-7
+    #addons: { apt: { packages: ["g++-7", "libstdc++-7-dev"], sources: ["ubuntu-toolchain-r-test"] } }
 
-  - os: osx
-    osx_image: xcode9.1
-    env: BS=cmake BENCHMARK=QUICK CXX=clang++
+  #- os: osx
+    #osx_image: xcode9.1
+    #env: BS=cmake BENCHMARK=QUICK CXX=clang++
 
 before_install:
   - git config --global user.name "Continuous Integration"
