--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -36,6 +36,13 @@ environment:
     MEMCHECK: DRMEMORY
     PLATFORM: amd64
 
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017 Preview
+    VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\Preview\Community\VC\Auxiliary\Build
+    BS: cmake
+    CMAKE_GENERATOR: Visual Studio 15 2017
+    MEMCHECK: DRMEMORY
+    PLATFORM: amd64
+
 matrix:
   fast_finish: true
 
