--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -34,10 +34,11 @@ example(pool_provider)
 example(scopes)
 example(try_it)
 
-example(polymorphism/inheritance)
-example(polymorphism/type_erasure)
-example(polymorphism/templates)
 example(polymorphism/concepts)
+example(polymorphism/inheritance)
+example(polymorphism/templates)
+example(polymorphism/type_erasure)
+example(polymorphism/variant)
 
 example(performance/create_bound_interface)
 example(performance/create_bound_interface_via_exposed_module)
