--- a/extension/test/CMakeLists.txt
+++ b/extension/test/CMakeLists.txt
@@ -24,6 +24,7 @@ test(policies/types_dumper)
 test(policies/uml_dumper)
 test(providers/heap)
 test(providers/mocks_provider)
+test(providers/runtime_provider)
 test(scopes/scoped)
 test(scopes/session)
 test(scopes/shared)
