--- a/.travis.yml
+++ b/.travis.yml
@@ -70,8 +70,18 @@ matrix:
 
   - os: linux
     dist: trusty
-    env: BS=cmake CXX=clang++-5.0 LIBCXX=ON
-    addons: { apt: { packages: ["clang-5.0", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-5.0"] } }
+    env: BS=cmake CXX=clang++-6.0
+    addons: { apt: { packages: ["clang-6.0", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0"] } }
+
+  - os: linux
+    dist: trusty
+    env: BS=cmake CXX=clang++-7
+    addons: { apt: { packages: ["clang-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-7"] } }
+
+  - os: linux
+    dist: trusty
+    env: BS=cmake CXX=clang++-7 LIBCXX=ON
+    addons: { apt: { packages: ["clang-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-7"] } }
 
   - os: linux
     dist: trusty
@@ -88,6 +98,11 @@ matrix:
     env: BS=cmake CXX=g++-7
     addons: { apt: { packages: ["g++-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
+  - os: linux
+    dist: trusty
+    env: BS=cmake CXX=g++-8
+    addons: { apt: { packages: ["g++-8", "libstdc++-8-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
+
   - os: osx
     osx_image: xcode7.3
     env: BS=cmake CXX=clang++
@@ -100,21 +115,29 @@ matrix:
     osx_image: xcode9.1
     env: BS=cmake CXX=clang++
 
+  - os: osx
+    osx_image: xcode10
+    env: BS=cmake CXX=clang++
+
+  - os: osx
+    osx_image: xcode10.1
+    env: BS=cmake CXX=clang++
+
 #
 # Bjam
 #
   - os: linux
     dist: trusty
-    env: BS=bjam TOOLSET=clang CXX=clang++-5.0
-    addons: { apt: { packages: ["clang-5.0", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-5.0"] } }
+    env: BS=bjam TOOLSET=clang CXX=clang++-7
+    addons: { apt: { packages: ["clang-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-7"] } }
 
   - os: linux
     dist: trusty
-    env: BS=bjam TOOLSET=gcc CXX=g++-7
-    addons: { apt: { packages: ["g++-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
+    env: BS=bjam TOOLSET=gcc CXX=g++-8
+    addons: { apt: { packages: ["g++-8", "libstdc++-8-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
   - os: osx
-    osx_image: xcode9.1
+    osx_image: xcode10.1
     env: BS=bjam TOOLSET=clang CXX=clang++
 
 #
@@ -122,16 +145,16 @@ matrix:
 #
   - os: linux
     dist: trusty
-    env: BS=cmake VARIANT=analyze CXX=clang++-5.0 LIBCXX=ON
-    addons: { apt: { packages: ["clang-5.0", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-5.0"] } }
+    env: BS=cmake VARIANT=analyze CXX=clang++-7 LIBCXX=ON
+    addons: { apt: { packages: ["clang-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-7"] } }
 
   - os: linux
     dist: trusty
-    env: BS=cmake VARIANT=analyze CXX=g++-7
-    addons: { apt: { packages: ["g++-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
+    env: BS=cmake VARIANT=analyze CXX=g++-8
+    addons: { apt: { packages: ["g++-8", "libstdc++-8-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
   - os: osx
-    osx_image: xcode9.1
+    osx_image: xcode10.1
     env: BS=cmake VARIANT=analyze CXX=clang++
 
 #
@@ -139,16 +162,16 @@ matrix:
 #
   - os: linux
     dist: trusty
-    env: BS=cmake MEMCHECK=valgrind CXX=clang++-4.0 LIBCXX=ON
-    addons: { apt: { packages: ["clang-4.0", "libstdc++-6-dev", "valgrind", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-4.0"] } }
+    env: BS=cmake MEMCHECK=valgrind CXX=clang++-7 LIBCXX=ON
+    addons: { apt: { packages: ["clang-7", "libstdc++-7-dev", "valgrind", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-7"] } }
 
   - os: linux
     dist: trusty
-    env: BS=cmake MEMCHECK=valgrind CXX=g++-7
-    addons: { apt: { packages: ["g++-7", "libstdc++-7-dev", "valgrind", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
+    env: BS=cmake MEMCHECK=valgrind CXX=g++-8
+    addons: { apt: { packages: ["g++-8", "libstdc++-8-dev", "valgrind", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
   - os: osx
-    osx_image: xcode9.1
+    osx_image: xcode10.1
     env: BS=cmake MEMCHECK=valgrind CXX=clang++
 
 #
@@ -156,25 +179,8 @@ matrix:
 #
   - os: linux
     dist: trusty
-    env: BS=bjam TOOLSET=gcc GCOV=gcov-7 VARIANT=coverage CXX=g++-7
-    addons: { apt: { packages: ["g++-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
-
-#
-# Benchmarks
-#
-  #- os: linux
-    #dist: trusty
-    #env: BS=cmake BENCHMARK=QUICK CXX=clang++-4.0 LIBCXX=ON
-    #addons: { apt: { packages: ["clang-4.0", "libstdc++-6-dev"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-4.0"] } }
-
-  #- os: linux
-    #dist: trusty
-    #env: BS=cmake BENCHMARK=QUICK CXX=g++-7
-    #addons: { apt: { packages: ["g++-7", "libstdc++-7-dev"], sources: ["ubuntu-toolchain-r-test"] } }
-
-  #- os: osx
-    #osx_image: xcode9.1
-    #env: BS=cmake BENCHMARK=QUICK CXX=clang++
+    env: BS=bjam TOOLSET=gcc GCOV=gcov-7 VARIANT=coverage CXX=g++-8
+    addons: { apt: { packages: ["g++-8", "libstdc++-8-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
 before_install:
   - git config --global user.name "Continuous Integration"
