:bug: [docs] FIx #69 inheritance example doesn't build
Problem:
- Locally included files aren't send to Wandbox when building cpp files.

Solution:
- Identify local includes and send them to Wandbox.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -10,6 +10,8 @@ function(example example)
     add_test(example.${tmp} example.${tmp})
 endfunction()
 
+include_directories(..)
+
 example(annotations)
 example(automatic_injection)
 example(bind_non_owning_ptr)
