--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,5 +27,5 @@ else()
 endif()
 
 add_subdirectory(example)
-add_subdirectory(extension)
+add_subdirectory(extension/test)
 add_subdirectory(test)
