:new: [example/polymorphism] Drawable example using std::function
Problem:
- There is no example of polymorphism using std::function.

Solution:
- Add `example/polymorphism/function.cpp` which demonstrates DI with std::function.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -41,6 +41,7 @@ example(scopes)
 example(try_it)
 
 example(polymorphism/concepts)
+example(polymorphism/function)
 example(polymorphism/inheritance)
 example(polymorphism/templates)
 example(polymorphism/type_erasure)
